<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundheaderlistrow"> 
     
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnback"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical="true"
        android:id="@+id/btnBack"
        />
    
    <ImageView
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:background="@drawable/folder_home"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/HeaderListFileImageFolderMarginLeft"
        />
    
     <TextView android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextHeaderListRowNameField"
        style="@style/TextHeaderListRow"
        android:layout_marginLeft="@dimen/HeaderListFileNameMarginLeft"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"/>
     
     <TextView
         android:id="@+id/fileSize"
         style="@style/TextHeaderListRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/HeaderListFileSizeMarginRight"
         android:layout_alignParentRight="true"
         android:text="@string/TextHeaderListRowSizeField" />
     
     <TextView android:id="@+id/fileModification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextHeaderListRowModificationField"
        style="@style/TextHeaderListRow"
        android:layout_marginLeft="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>